Content/css/master.css
/*  Site.Master pages styles */
/*  Site.Master pages styles */
/*  Site.Master pages styles */
* {
    --primary-color: #d35555;
    --primary-color-hover: #E39090;
    --primary-color-active: #F2CCCC;
    --secondary-color-yellow: #FFF96D;
    --notification-error: #d35555;
    --notification-success: #5aad7f;
    --theme-gray-dark: #9F9F9F;
    --theme-white: #f5f5f5;
}

html {
    scroll-behavior: smooth;
}

*,
::after,
::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Rubik', sans-serif;
    overflow-x: hidden;
    margin: auto;
}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
}

img {
    max-width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Mitr', sans-serif;
}

a,
p,
span,
button,
textarea,
input,
select,
option {
    font-family: 'Rubik', sans-serif;
}

input,
textarea,
button:focus {
    outline: 0;
    box-shadow: none;
}

/* Navbar */
nav {
    background: #d35555;
    width: 100%;
    height: 8vh;
    min-height: 8vh;
}

/* Fixed nav */
.fixed-nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: #d35555;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
    z-index: 9999;
}

.fixed-nav .links a {
    color: #fff;
}

.nav-center {
    max-width: 85%;
    height: 100%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.nav-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0;
}

.show-links {
    display: flex !important;
 }

.nav-toggle {
    display: none;
    position: relative;
    font-size: 1.5rem;
    color: #fff;
    background: transparent;
    border-color: transparent;
    transition: all 0.3s ease-out;
    cursor: pointer;
}

.nav-toggle:hover {
    color: hsl(209, 61%, 16%);
}

.nav-header .logo {
    display: flex;
    align-items: center;
}

.nav-header .logo img {
    width: 60px;
}

.nav-header .logo p {
    font-size: 24px;
    color: #323232;
    font-family: 'Mitr', sans-serif;
    font-weight: 600;
    margin: 0;
}

.links {
    display: flex;
    height: inherit;
    margin: 0;
    align-items: center
}

.mobileLinks {
    position: absolute;
    top: 10vh;
    right: 1rem;
    display: none;
    flex-direction:column;
    margin: 0;
    align-items: flex-start;
    justify-content: center;
    z-index: 9999;
    border: 2px solid var(--primary-color);
    border-radius: 5px;
    padding: 0;
    background: #fff;
}

.links-container, .links-dropdown {
    height: 100%;
    overflow: hidden;
}

.links li {
    height: inherit;
}

.mobileLinks li {
    width: 100%;
    font-size: 18px;
    padding: 0.5rem 0;
    transition: all .3s ease-out;
}

.scroll-link i {
    color: #fff;
    font-size: 17px;
    margin-right: 10px;
}

.scroll-link.active {
    background: linear-gradient(360deg, #E8AC13 -110%, #D35555 50%);
    border-bottom: 2px solid #e8ac13;
}

.links a, .mobileLinks a {
    width: inherit;
    height: inherit;
    color: #fff;
    font-size: 17px;
    text-transform: capitalize;
    text-decoration: none;
    display: flex;
    align-items: center;
    padding: 0 1rem;
    font-weight: 500;
    transition: all .3s ease-out;
}

.mobileLinks a, .mobileLinks i {
    color: var(--primary-color);
}

.scroll-link:hover {
    background: var(--primary-color-hover);
}

.scroll-link:active {
    background: var(--primary-color-active);
}

.mobileLinks li:active, mobileLinks li:hover {
    background: var(--primary-color-active);
}

/* Notification */
.notification {
    display: none;
    position: fixed;
    top: 3rem;
    right: 3rem;
    padding: 1rem 1.5rem 0.5rem 1.5rem;
    width: 300px;
    background-color: var(--primary-color);
    border-radius: 6px;
    box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.4) !important;
    transition: opacity 0.1s linear;
}

.notification:hover {
    cursor: pointer;
    opacity: 70%;
}

.notification-title {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    color: white;
}

.notification-title h4 {
    padding-left: 0.5rem;
    margin: 0;
    font-family: 'Mitr', Arial, sans-serif;
    font-size: 16px;
    font-weight: 500;
    word-wrap: break-word;
}

.notification-message {
    padding-top: 0.4rem;
    width: 100%;
    color: white;
    font-family: 'Rubik', Arial, sans-serif;
    font-size: 13px;
    font-weight: 400;
    word-wrap: break-word;
}

ul.notification-message {
    margin: 0;
    padding: 0.1rem 0 0 1rem;
    font-size: 12px;
    list-style-type: disc;
}

.notification-tip {
    display: block;
    padding-top: 1rem;
    color: white;
    font-family: 'Rubik', Arial, sans-serif;
    font-size: 11px;
    text-align: center;
    letter-spacing: 1px;
}

/* Animated Link Text */
.gray-animated-link-text {
    display: inline-block;
}

.gray-animated-link-text::after {
    content: '';
    width: 0px;
    height: 1.5px;
    display: block;
    background: #323232;
    transition: 300ms;
}

.gray-animated-link-text:hover::after {
    width: 100%;
}

.red-animated-link-text {
    display: inline-block;
}

.red-animated-link-text::after {
    content: '';
    width: 0px;
    height: 1.5px;
    display: block;
    background: var(--primary-color);
    transition: 300ms;
}

.red-animated-link-text:hover::after {
    width: 100%;
}

@media screen and (max-width: 1024px) {
    .fixed-nav {
        left: 0;
        width: 100%;
    }

    .nav-center {
        width: 90vw;
    }
}

/* Footer  */
/* Footer  */
/* Footer  */
footer {
    min-height: 15vh;
    background: #323232;
    padding: 2rem 0;
}

    footer .footer-container {
        display: flex;
        justify-content: space-between;
    }

        footer .footer-container .footer-left {
            width: 80%;
            display: flex;
            gap: 40px;
            padding: 0 2rem;
        }

            footer .footer-container .footer-left .logo img {
                width: 250px;
            }

            footer .footer-container .footer-left .logo p {
                font-size: 12px;
            }



            footer .footer-container .footer-left .menu h4 {
                color: #fff;
                text-align: left;
                border-bottom: 2px solid #fff;
                padding-bottom: 0.3rem;
            }

            footer .footer-container .footer-left .menu .link {
                padding-top: 1rem;
            }

            footer .footer-container .footer-left .menu a {
                font-size: 15px;
                color: #ddd;
                display: block;
                padding-top: 0.5rem;
                text-transform: capitalize;
                text-decoration: none;
                transition: all .3s ease-out;
            }

                footer .footer-container .footer-left .menu a:hover {
                    background: none;
                    color: #fff;
                }

        footer .footer-container .footer-right {
            width: 20%;
            display: flex;
            justify-content: right;
        }

            footer .footer-container .footer-right img {
                width: 200px;
                margin-bottom: -2rem;
            }

    footer p {
        color: #fff;
        text-align: center;
        text-transform: capitalize;
        margin-bottom: 0;
    }

@media screen and (max-width: 992px) {
    footer .footer-container {
        flex-direction: column;
    }

        footer .footer-container .footer-left {
            width: 100%;
        }

        footer .footer-container .footer-right {
            width: 100%;
        }

        footer .footer-container .footer-left .logo {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
        }
}

@media screen and (max-width: 530px) {
    footer .footer-container .footer-left {
        flex-direction: column;
    }

        footer .footer-container .footer-left .menu {
            text-align: center;
        }

            footer .footer-container .footer-left .menu h4 {
                border-bottom: none;
            }
}

.top-link {
    font-size: 1.25rem;
    position: fixed;
    bottom: 3rem;
    right: 3rem;
    background: #d35555;
    width: 2.5rem;
    height: 2.5rem;
    display: grid;
    place-items: center;
    border-radius: 0.5rem;
    color: #fff;
    animation: bounce 2s ease-in-out infinite;
    visibility: hidden;
    z-index: -100;
}

.top-link:hover {
    color: var(--secondary-color-yellow);
    text-decoration: none;
}

.show-link {
    visibility: visible;
    z-index: 100;
}

@keyframes bounce {
    0% {
        transform: scale(1);
    }

    50% {
        transform: scale(1.5);
    }

    100% {
        transform: scale(1);
    }
}

@media screen and (min-width: 1000px) {
    .links {
        display: flex;
    }
}

@media screen and (max-width: 1000px) {
    .links {
        display: none;
    }

    .links-dropdown {
        display: flex;
        align-items: center;
    }

    .nav-toggle {
        display: inline-block;
    }

    .nav-header .logo img {
        margin-top: 0;
    }

    .nav-header .logo p {
        margin-top: 0;
    }

    .scroll-link.active {
        background: unset;
        border-bottom: unset;
    }

    .scroll-link:hover {
        background: unset;
    }

    .scroll-link:active {
        background: unset;
    }
}

